# Robotica

./: README.md  ∼
devel/: .catkin
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/imu_laser/: .catkin  .rosinstall  setup.sh
devel/.private/imu_laser/lib/imu_laser/: imu_calibrator  landmark_detector
devel/.private/imu_laser/lib/pkgconfig/: imu_laser.pc
devel/.private/joy/: .catkin  .rosinstall  setup.sh
devel/.private/joy/lib/joy/: joy_node
devel/.private/joy/lib/pkgconfig/: joy.pc
devel/.private/keyboard/: .catkin  .rosinstall  setup.sh
devel/.private/keyboard/include/keyboard/: Key.h
devel/.private/keyboard/lib/keyboard/: keyboard
devel/.private/keyboard/lib/pkgconfig/: keyboard.pc
devel/.private/kfilter/: .catkin  .rosinstall  setup.sh
devel/.private/kfilter/lib/pkgconfig/: kfilter.pc
devel/.private/lazo_abierto/: .catkin  .rosinstall  setup.sh
devel/.private/lazo_abierto/lib/lazo_abierto/: logger  trajectory_follower  trajectory_generator
devel/.private/lazo_abierto/lib/pkgconfig/: lazo_abierto.pc
devel/.private/lazo_cerrado/: .catkin  .rosinstall  setup.sh
devel/.private/lazo_cerrado/lib/lazo_cerrado/: logger  trajectory_follower
devel/.private/lazo_cerrado/lib/pkgconfig/: lazo_cerrado.pc
devel/.private/modelo_diferencial/: .catkin  .rosinstall  setup.sh
devel/.private/modelo_diferencial/lib/modelo_diferencial/: pioneer_odometry
devel/.private/modelo_diferencial/lib/pkgconfig/: modelo_diferencial.pc
devel/.private/robmovil_ekf/: .catkin  .rosinstall  setup.sh
devel/.private/robmovil_ekf/lib/pkgconfig/: robmovil_ekf.pc
devel/.private/robmovil_ekf/lib/robmovil_ekf/: localizer
devel/.private/robmovil_msgs/: .catkin  .rosinstall  setup.sh
devel/.private/robmovil_msgs/include/robmovil_msgs/: EncoderTicks.h  Landmark.h  LandmarkArray.h  MultiEncoderTicks.h  Trajectory.h  TrajectoryPoint.h
devel/.private/robmovil_msgs/lib/pkgconfig/: robmovil_msgs.pc
devel/.private/robmovil_planning/: .catkin  .rosinstall  setup.sh
devel/.private/robmovil_planning/lib/pkgconfig/: robmovil_planning.pc
devel/.private/robmovil_planning/lib/robmovil_planning/: path_planning
devel/.private/ros_intro/: .catkin  .rosinstall  setup.sh
devel/.private/ros_intro/lib/pkgconfig/: ros_intro.pc
devel/.private/ros_intro/lib/ros_intro/: keys_to_twist
devel/.private/rviz_plugin_covariance/: .catkin  .rosinstall  setup.sh
devel/.private/universal_teleop/: .catkin  .rosinstall  setup.sh
devel/.private/vrep_util/: .catkin  .rosinstall  setup.sh
devel/.private/vrep_util/lib/pkgconfig/: vrep_util.pc
logs/joy/: build.cmake.000.log.stderr
logs/keyboard/: build.cmake.000.log.stderr
logs/lazo_abierto/: build.make.003.log.stderr
logs/lazo_cerrado/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr
logs/rviz_plugin_covariance/: build.cmake.000.log.stderr  build.make.000.log.stderr
src/imu_laser/: CMakeLists.txt
src/imu_laser/launch/: imu.launch  imu.rviz  landmark_detector.launch  landmark_detector.rviz
src/imu_laser/src/: imu_calibrator.cpp  imu_calibrator.h  imu_calibrator_node.cpp  landmark_detector.cpp  landmark_detector.h  landmark_detector_node.cpp
src/imu_laser/vrep/: imu_bias.ttt  laser_landmarks.ttt
src/keyboard/: CHANGELOG.rst
src/keyboard/src/: keyboard.h
src/kfilter/: CMakeLists.txt
src/lazo_abierto/: CMakeLists.txt
src/lazo_abierto/include/lazo_abierto/: FeedForwardController.h  TrajectoryFollower.h
src/lazo_abierto/launch/: lazo_abierto.launch
src/lazo_abierto/src/: FeedForwardController.cpp  TrajectoryFollower.cpp  trajectory_follower_node.cpp  trajectory_generator_node.cpp  trajectory_waypoints_node.cpp
src/lazo_abierto/vrep/: lazo_abierto.ttt
src/lazo_cerrado/: CMakeLists.txt  package.xml
src/lazo_cerrado/launch/: lazo_cerrado.launch
src/lazo_cerrado/src/: KinematicPositionController.cpp  KinematicPositionController.h  kinematic_position_controller_node.cpp  logger_node.cpp
src/modelo_diferencial/: CMakeLists.txt
src/modelo_diferencial/launch/: modelo_diferencial.launch
src/modelo_diferencial/src/: pioneer_odometry.cpp  pioneer_odometry.h  pioneer_odometry_node.cpp
src/modelo_diferencial/vrep/: modelo_diferencial.ttt
src/robmovil_ekf/: CMakeLists.txt
src/robmovil_ekf/launch/: ekf.rviz  robmovil_ekf.launch  robmovil_ekf_Lazo.launch  rosconsole.conf
src/robmovil_ekf/src/: localizer.cpp  localizer.h  localizer_ekf.cpp  localizer_ekf.h  localizer_node.cpp
src/robmovil_ekf/vrep/: laser_landmarks.ttt
src/robmovil_msgs/: CMakeLists.txt  package.xml
src/robmovil_msgs/msg/: EncoderTicks.msg  Landmark.msg  MultiEncoderTicks.msg  Trajectory.msg  TrajectoryPoint.msg
src/robmovil_planning/: CMakeLists.txt
src/robmovil_planning/include/robmovil_planning/: GridPlanner.h
src/robmovil_planning/launch/: robmovil_planning_test.launch
src/robmovil_planning/src/: GridPlanner.cpp  pathplanning_node.cpp  tf_utils.hpp
src/robmovil_planning/vrep/: path_planning.ttt
src/ros-universal-teleop/: CMakeLists.txt
src/ros-universal-teleop/launch/: ardrone-settings.xml  ardrone.launch  ardrone_input_map.yml  ardrone_scales.yml  dummy.launch  joy_foxconn.yml  keyboard.yml  keyboard_arrows.yml  pioneer.launch  pioneer_scales.yml  pixhawk.launch  pixhawk_scales.yml  pixhawk_sitl.launch  scorbot.launch  scorbot_input_map.yml  scorbot_no_control.launch  vrep_pioneer_irm.launch  vrep_quad.launch
src/ros-universal-teleop/msg/: Control.msg
src/ros-universal-teleop/src/: rc_teleop.cpp  rc_teleop.h  rc_teleop_node.cpp  teleop.cpp  teleop.h  teleop_node.cpp
src/ros-vrep-util/: CMakeLists.txt
src/ros-vrep-util/src/: clock_publisher.cpp
src/ros_intro/: CMakeLists.txt
src/ros_intro/launch/: ros_intro_vrep.launch
src/ros_intro/src/: keys_to_twist.cpp  keys_to_twist.h  keys_to_twist_node.cpp
src/ros_intro/vrep/: ros_intro.ttt
src/rviz_plugin_covariance/: CMakeLists.txt
src/vrep/: omni_ekf.ttt
(+71 files in other folders)
