<?xml version="1.0"?>
<package>
  <name>lazo_cerrado</name>
  <version>0.0.0</version>
  <description>Taller de control de trayectoria a lazo cerrado con un modelo de tracción diferencial.</description>

  <maintainer email="tfischer@todo.todo">tfischer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>lazo_abierto</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>lazo_abierto</run_depend>

  <export>
  </export>
</package>
