<?xml version="1.0"?>
<package>
  <name>robmovil_msgs</name>
  <version>0.0.0</version>
  <description>Mensajes utilizados por la materia de robótca móvil.</description>

  <maintainer email="tfischer@todo.todo">tfischer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
